--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/ico" href="./src/assets/img/favicon.ico">
-		<link rel="shortcut icon" type="image/ico" href="./src/assets/img/favicon.ico" />
+    <link rel="icon" type="image/ico" href="/img/favicon.ico">
+		<link rel="shortcut icon" type="image/ico" href="/img/favicon.ico" />
      <!-- GOOGLE FONTS -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
